# mi_cli_with_actions

./: README.md  cli.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_cli.py
